<resources>
    <string name="app_name">Squadline</string>

    <!--Firebase Constants-->
    <string name="firebase_address">https://fiery-fire-8218.firebaseio.com/</string>
    <string name="TimelinesParentAddress">Timelines/</string>
    <string name="TimelinesAddress">Timelines</string>
    <string name="TimelinesChildAddress">/Timelines</string>
    <string name="UsersParentAddress">Users/</string>
    <string name="UsersAddress">Users</string>
    <string name="UsersChildAddress">/Users</string>
    <string name="EventsParentAddress">Events/</string>
    <string name="EventsAddress">Events</string>
    <string name="EventsChildAddress">/Events</string>
    <string name="LastModifiedAddress">LastModified</string>
    <string name="LastModifiedChildAddress">/LastModified</string>

    <!--Common Strings-->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="appIcon">App Icon</string>

    <!--Login Page Strings-->
    <string name="emailHint">ggillespie@ucsd.edu</string>
    <string name="loginBtn">Log In</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="signUp">Sign Up</string>

    <!--Registration Page Strings-->
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>

    <!--Main Screen Strings-->
    <string name="tlTitle">Title</string>
    <string name="tlMembers">Members</string>
    <string name="lastModified">01/01/2016</string>
    <string name="addTimeline">Add Timeline</string>

    <!--Bundle Strings-->
    <string name="TimelineIDKey">Timeline ID</string>
    <string name="TimelineNameKey">Timeline Name</string>

    <!--View Timeline Strings-->
    <string name="editEventBtn">Edit Event</string>
    <string name="eventImageDesc">Photo Event</string>
    <string name="timelineSettings">Timeline Settings</string>

    <!--Sidebar Strings-->
    <string name="fullName">Burt Macklin</string>
    <string name="headerEmail">bmacklin@ucsd.edu</string>
    <string name="account">Account</string>
    <string name="changeName">Change Name</string>
    <string name="changePhoto">Change Photo</string>
    <string name="changePassword">Change Password</string>
    <string name="help">Help</string>
    <string name="logout">Log Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Timeline Settings Strings-->
    <string name="settingsTitle">Details</string>
    <string name="settingsAddPeople">Add People</string>
    <string name="settingsLeave">Leave Squad</string>
    <string name="changeSquadName">Change Squad Name</string>
    <string name="changeSquadPhoto">Change Squad Photo</string>

    <!--Add Event Strings-->
    <string name="addEventTitle">Add Event</string>
    <string name="addEventDone">Done</string>
    <string name="addEventCancel">Cancel</string>
    <string name="eventTitle">Title</string>
    <string name="eventDate">Date</string>
    <string name="eventQuote">Quote</string>
    <string name="eventSource">Source</string>
    <string name="eventPhoto">Upload image</string>
    <string name="eventDescription">Description</string>
    <string name="eventText">Text</string>
    <string name="ErrorSelectAnImage">Please select an image.</string>
    <string name="ErrorEnterAQuote">Please enter a quote.</string>
    <string name="ErrorEnterText">Please enter text.</string>

    <!--Edit Event Strings-->
    <string name="editEvent">Edit Event</string>
    <string name="deleteEvent">Delete Event</string>
    <string name="editTitle">Title</string>
    <string name="editText">Text</string>
    <string name="editDate">Date</string>
    <string name="editDescription">Description</string>
    <string name="editQuote">Quote</string>
    <string name="editSource">Source</string>

    <!--Change Photo Strings-->
    <string name="chooseFile">Choose File</string>
    <string name="noFileChosen">No file chosen</string>

    <!--Change Password Strings-->
    <string name="currentPassword">Current Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>

    <!--Fonts-->
    <string name="BebasNeueRegular">fonts/BebasNeue Regular.ttf</string>
    <string name="BebasNeueBold">fonts/BebasNeue Bold.ttf</string>
    <string name="LiberationSansRegular">fonts/LiberationSans-Regular.ttf</string>
    <string name="RobotoRegular">fonts/Roboto-Regular.ttf</string>
    <string name="RobotoMedium">fonts/Roboto-Medium.ttf</string>
    <string name="RobotoSlabRegular">fonts/RobotoSlab-Regular.ttf</string>
    <string name="RobotoSlabBold">fonts/RobotoSlab-Bold.ttf</string>

    <!--Event Types-->
    <string name="EventTypePhoto">photo</string>
    <string name="EventTypeQuote">quote</string>
    <string name="EventTypeText">text</string>

</resources>
