<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Account">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/navChangeName"
                    android:icon="@drawable/ic_account_circle_drawer"
                    android:title="@string/changeName" />
                <item
                    android:id="@+id/navChangePhoto"
                    android:icon="@drawable/ic_photo_camera_drawer"
                    android:title="@string/changePhoto" />
                <item
                    android:id="@+id/navChangePassword"
                    android:icon="@drawable/ic_lock_drawer"
                    android:title="@string/changePassword" />
            </group>
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navHelp"
            android:icon="@drawable/ic_help_drawer"
            android:title="@string/help" />
        <item
            android:id="@+id/navLogOut"
            android:icon="@drawable/ic_power_drawer"
            android:title="@string/logout" />
    </group>

</menu>