<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    android:paddingTop="10dp">

    <EditText
        android:id="@+id/changeQuoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editEventTitles" />

    <EditText
        android:id="@+id/changeQuote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editQuote" />

    <EditText
        android:id="@+id/changeQuoteDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editSource" />

    <EditText
        android:id="@+id/changeQuoteSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editDate" />
</LinearLayout>