<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.keepingatimeline.kat.LoginActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.35"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2.5dp"
            android:padding="10dp"
            android:background="@color/white"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:clickable="true"
            android:hint="@string/emailHint" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:background="@color/white"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/passwordHint" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/loginBtn"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/forgotPassword"
            android:textColor="@color/white"
            android:linksClickable="true" />

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/signUp"
            android:textColor="@color/white"
            android:linksClickable="false" />

    </LinearLayout>

</LinearLayout>
